--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: #121829;
+    background-color: #0d182a;
+    font-family: Poppins,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
+    font-weight: 400
 }
 
