--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,18 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: #0d182a;
+    background-color: #20283e;
     font-family: Poppins,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
     font-weight: 400
 }
 
+
+
+.movieContainer{
+    padding: 0 120px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px; /* Расстояние между карточками */
+    max-width: 1215px; /* Максимальная ширина контейнера */
+    margin: 0 auto; /* Центрирование контейнера на странице */
+}
