--- a/src/components/filter/index.css
+++ b/src/components/filter/index.css
@@ -1,8 +1,94 @@
-.tab-container{
-    display: flex;
-    padding: 10px 10px;
-    justify-content: space-between;
-    width: 250px;
-    border-radius: 7px;
-    background-color: #0b48ec;
+/*.tab-container{*/
+/*    display: flex;*/
+/*    padding: 0 20px;*/
+/*    justify-content: space-between;*/
+/*    align-items: center;*/
+/*    width: 250px;*/
+/*    height: 70px;*/
+/*    border-radius: 7px;*/
+/*    background-color: rgba(0,0,0,0.2);*/
+/*}*/
+
+.tabWrapper{
+    padding: 30px 120px;
 }
+
+/*.tab{*/
+/*    color: #767e94;*/
+/*    font-weight: bold;*/
+/*    cursor: pointer;*/
+/*    font-size: 15px;*/
+
+/*}*/
+
+/*.active{*/
+/*    background-color: white;*/
+/*    width: 50px;*/
+/*    height: 25px;*/
+/*    border-radius: 5px;*/
+
+
+/*}*/
+
+.tab-container {
+    display: flex;
+    justify-content: center;
+    width: 300px;
+    background-color:  rgba(0,0,0,0.2);
+    border-radius: 9px;
+    overflow: hidden;
+    padding: 10px 10px;
+}
+
+.tab {
+    padding: 5px 20px;
+    cursor: pointer;
+    transition:  0.3s;
+    color: #767e94;
+    font-weight: bold;
+    border-radius: 10px;
+}
+
+.tab.active {
+    background-color: #5b4af4;
+    color: #fff;
+}
+
+
+/*.tab-container .tab {*/
+/*    position: relative;*/
+/*}*/
+
+/*.tab.active:before {*/
+/*    content: '';*/
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    left: 0;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    background-color: #800080; !* Фиолетовый цвет *!*/
+/*    opacity: 0;*/
+/*    z-index: -1;*/
+/*    transition: opacity 0.3s;*/
+/*}*/
+
+/*.tab.active:hover:before {*/
+/*    opacity: 0.1; !* Немного меняем прозрачность при наведении *!*/
+/*}*/
+
+/*.tab.active:after {*/
+/*    content: '';*/
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    left: 0;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    background-color: #800080; !* Фиолетовый цвет *!*/
+/*    opacity: 0.1;*/
+/*    z-index: -1;*/
+/*    transition: opacity 0.3s;*/
+/*}*/
+
+/*.tab.active:hover:after {*/
+/*    opacity: 0; !* Немного меняем прозрачность при наведении *!*/
+/*}*/
